Fixes css ,navbar and footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">   
 
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>CITY Real Estate</title>  
+<title>AUTO V&D</title>  
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logos/logo.png" alt="image"></a>
+                    <a class="navbar-brand" href="index.html">AUTO VD</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   
@@ -88,8 +88,8 @@
             <div class="row">
 				<div class="col-md-6 col-sm-12">
                     <div class="big-tagline clearfix">
-                        <h2>Sell Your Property with CITY Real Estate</h2>
-                        <p class="lead">With CITY Real Estate responsive landing page template, you can promote your all property & real estate projects. </p>
+                        <h2>Get your dream car now!</h2>
+                        <p class="lead">With auto VD responsive landing page template, you can promote your all premium cars. </p>
                         <a data-scroll href="#gallery" class="btn btn-light btn-radius grd1 btn-brd">View Gallery</a>
                     </div>
                 </div>
@@ -137,13 +137,13 @@
 			<div class="row">
 				<div class="col-md-6">
                     <div class="post-media wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
-                        <img src="uploads/about_bg.jpg" alt="" class="img-responsive">                        
+                        <img src="uploads\about-bg.jpg" alt="" class="img-responsive">                        
                     </div><!-- end media -->
                 </div>
 				<div class="col-md-6">
 					<div class="message-box right-ab">
-                        <h4>Awards Winning Real Estate Company</h4>
-                        <h2>Welcome to CITY Real Estate</h2>
+                        <h4>Awards Winning Car Dealership Company</h4>
+                        <h2>Welcome to Auto Showroom VD</h2>
                         <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
 						<p>Aenean eleifend in felis id viverra. Vestibulum semper ex eu molestie pulvinar. Maecenas non efficitur metus, et semper sem. Mauris ligula sapien, gravida a scelerisque ut, vehicula sed mauris. Proin dapibus mi id vulputate euismod. Nam ullamcorper dui tellus, non lacinia lorem hendrerit eu. Donec at orci cursus, rutrum metus eget, cursus turpis.  </p>
 						<a href="#" class="btn btn-light btn-radius grd1 btn-brd"> Read More </a>
@@ -284,7 +284,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="widget clearfix">
                         <div class="widget-title">
-                            <img src="images/logos/logo-realestate.png" alt="">
+                            <!-- <img src="images/logos/logo.jpg" alt=""> -->
                         </div>
                         <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
                         <p>Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
@@ -315,8 +315,8 @@
                         </div>
 
                         <ul class="footer-links">
-                            <li><a href="mailto:#">CityRealEstate@gmail.com</a></li>
-                            <li><a href="#">www.City-RealEstate.com</a></li>
+                            <li><a href="mailto:#">autovd@gmail.com</a></li>
+                            <li><a href="#">www.Auto-VD.com</a></li>
                             <li>Lagjja Kalabria,10000 Prishtine, Kosovo</li>
                             <li>+383 44 123 654</li>
                         </ul>
