--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logos/logo.png" alt="image"></a>
+                    <a class="navbar-brand" href="index.html">AUTO VD</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -153,7 +153,7 @@
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="widget clearfix">
                         <div class="widget-title">
-                            <img src="images/logos/logo-realestate.png" alt="">
+                            <!-- <img src="images/logos/logo-realestate.png" alt=""> -->
                         </div>
                         <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
                         <p>Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis montes.</p>
@@ -184,8 +184,8 @@
                         </div>
 
                         <ul class="footer-links">
-                            <li><a href="mailto:#">CityRealEstate@gmail.com</a></li>
-                            <li><a href="#">www.City-RealEstate.com</a></li>
+                            <li><a href="mailto:#">autovd@gmail.com</a></li>
+                            <li><a href="#">www.Auto-VD.com</a></li>
                             <li>Lagjja Kalabria,10000 Prishtine, Kosovo</li>
                             <li>+383 44 123 654</li>
                         </ul>
