Krijimi i faqes Contact

--- a/index.html
+++ b/index.html
@@ -176,10 +176,11 @@
                     </div>
                 </div>
 				<div class="col-md-3">
-                    <div class="post-media wow fadeIn">
-                        <img src="uploads/agent.jpg" alt="" class="img-responsive">
-                        <a href="https://www.youtube.com/watch?v=z5VfekpUpms" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
-                    </div>
+                    <div class="col-md-3">
+                        <div class="post-media wow fadeIn">
+                            <img src="uploads/bentley1.jpg" alt="" class="img-responsive">
+                            <a href="https://www.youtube.com/watch?v=gacQ0TBiZEw" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
+                        </div>
                 </div>
                 <div class="col-md-3">
                     <div class="agencies_meta clearfix">
