--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <link rel="stylesheet" href="css/versions.css">
 <link rel="stylesheet" href="css/responsive.css">
 <link rel="stylesheet" href="css/custom.css">
+
+
 <script src="js/modernizer.js"></script>
 
 
@@ -47,7 +49,8 @@
                 <div id="navbar" class="navbar-collapse collapse">
                   
                     <ul class="nav navbar-nav navbar-right">
-                      
+                        <li><a href="pixi.html">Welcome </a></li>
+
                         <li><a class="active" href="index.html">Home</a></li>
                         <li><a href="about.html">About us </a></li>
                         <li><a href="service.html">Service</a></li>
