--- a/pixi.html
+++ b/pixi.html
@@ -27,11 +27,11 @@
       }
 
       #home-button {
-        position: fixed;
+        position: absolute;
         top: 20px;
         left: 20px;
-        background-color: lightgreen;
-        color: #ffffff;
+        background-color: rgb(226, 226, 226);
+        color: #000000;
         padding: 10px 20px;
         border: none;
         border-radius: 5px;
@@ -42,13 +42,18 @@
     </style>
   </head>
   <body>
-    <div id="pixi-container"></div>
+    <div id="pixi-container">
+    <button id="home-button" onclick="goToHome()">Go to Home</button>
+
+    </div>
     <div id="content">
-      <h1>Welcome to our City Real Estate Website</h1>
-      <p>Discover your dream home today!</p>
+
+      <h1>Welcome to our Auto Salon Website</h1>
+      <p>Discover your dream cars today!</p>
+     
     </div>
 
-    <button id="home-button" onclick="goToHome()">Go to Home</button>
+   
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.3/pixi.min.js"></script>
     <script>
@@ -56,7 +61,7 @@
       const app = new PIXI.Application({
         width: window.innerWidth,
         height: window.innerHeight,
-        backgroundColor: 0x3e8f3e, // Green color
+        backgroundColor: 0x000000, // Black color
       });
       document.getElementById("pixi-container").appendChild(app.view);
 
@@ -66,7 +71,7 @@
 
       app.ticker.add(() => {
         graphics.clear();
-        const animationColor = 0xffcc00; // Color for the little animations (yellow)
+        const animationColor = 0x808080; // Color for the little animations (gray)
         graphics.beginFill(animationColor);
         graphics.drawRect(
           Math.random() * app.screen.width,
