--- a/index.html
+++ b/index.html
@@ -161,38 +161,35 @@
         <div class="container">
             <div class="section-title row text-center">
                 <div class="col-md-8 col-md-offset-2">
-                    <h3>Agent Details</h3>
-                    <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                    <h3>Bentley</h3>
+                    <p class="lead">The Epitome of Luxury and Performance</p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">
-                        <h4>The Agent</h4>
-                        <h2>Shkurte Fejza</h2>
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                       
+                        <p class="lead">Discover the Bentley car—a masterpiece of luxury, power, and craftsmanship. With exquisite attention to detail and unparalleled performance, every Bentley car offers an extraordinary driving experience. Elevate your journey with the timeless elegance and cutting-edge innovation that only Bentley can provide.
 
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                        </p>
 
-                        <a href="#contact" data-scroll class="btn btn-light global-radius btn-brd grd1 effect-1">Contact Me</a>
                     </div>
                 </div>
 				<div class="col-md-3">
-                    <div class="col-md-3">
-                        <div class="post-media wow fadeIn">
-                            <img src="uploads/bentley1.jpg" alt="" class="img-responsive">
-                            <a href="https://www.youtube.com/watch?v=gacQ0TBiZEw" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
-                        </div>
+                    <div class="post-media wow fadeIn">
+                        <img src="uploads/bentley1.jpg" alt="" class="img-responsive">
+                        <a href="https://www.youtube.com/watch?v=gacQ0TBiZEw" data-rel="prettyPhoto[gal]" class="playbutton"><i class="flaticon-play-button"></i></a>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="agencies_meta clearfix">
-                        <span><i class="fa fa-envelope "></i> <a href="mailto:support@sitename.com">shkurt.fejza@gmail.com</a></span>
-                        <span><i class="fa fa-link "></i> <a href="#">www.City-RealEstate.com</a></span>
+                        <span><i class="fa fa-envelope "></i> <a href="mailto:support@sitename.com">autovd@gmail.com</a></span>
+                        <span><i class="fa fa-link "></i> <a href="#">www.Auto-VD.com</a></span>
                         <span><i class="fa fa-phone-square "></i>+383 45 445 778</span>
-                        <span><i class="fa fa-facebook-square "></i> <a href="#">facebook.com/Shkurte</a></span>
-                        <span><i class="fa fa-twitter-square "></i> <a href="#">twitter.com/Shkurte</a></span>
-                        <span><i class="fa fa-linkedin-square "></i> <a href="#">linkedin.com/Shkurte</a></span>
+                        <span><i class="fa fa-facebook-square "></i> <a href="#">facebook.com/AutoVD</a></span>
+                        <span><i class="fa fa-twitter-square "></i> <a href="#">twitter.com/AutoVD</a></span>
+                        <span><i class="fa fa-linkedin-square "></i> <a href="#">linkedin.com/AutoVD</a></span>
                     </div>
                 </div>
             </div>
