--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 			<div class="row">
 				<div class="col-md-6">
                     <div class="post-media wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
-                        <img src="uploads/about_bg.jpg" alt="" class="img-responsive">                        
+                        <img src="uploads\about-bg.jpg" alt="" class="img-responsive">                          
                     </div><!-- end media -->
                 </div>
 				<div class="col-md-6">
