--- a/properties.html
+++ b/properties.html
@@ -48,7 +48,7 @@
                         <li><a href="about.html">About us </a></li>
                         <li><a href="service.html">Service</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a class="active" href="properties.html">Properties</a></li>
+                        <li><a class="active" href="properties.html">Deals</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="social-links"><a href="#"><i class="fa fa-twitter global-radius"></i></a></li>
                         <li class="social-links"><a href="#"><i class="fa fa-facebook global-radius"></i></a></li>
@@ -70,12 +70,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Properties</h2>
+					<h2>Deals</h2>
 					<!-- Breadcrumbs -->
 					<nav id="breadcrumbs">
 						<ul>
 							<li><a href="#">Home</a></li>
-							<li>Properties</li>
+							<li>Deals</li>
 						</ul>
 					</nav>
 				</div>
@@ -87,9 +87,9 @@
 	<div class="container">
 		<div class="section-title row text-center">
 			<div class="col-md-8 col-md-offset-2">
-				<small>All Awesome Property Details</small>
-				<h3>Property Details</h3>
-				<p class="lead">The property details for the vehicle include its make, model, year, mileage, engine type, fuel efficiency, seating capacity, and safety features.</p>
+				<small>All Awesome Deals </small>
+				<h3>Our Deals </h3>
+				<p class="lead">The business deals for the vehicle include its make, model, year, mileage, engine type, fuel efficiency, seating capacity, and safety features.</p>
 			</div>
 		</div>
 		
