--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
                             <li><a href="./about.html"> About Us </a></li>
                             <li><a href="./service.html"> Services</a></li>
 							<li><a href="./gallery.html"> Gallery</a></li>
-							<li><a href="./properties.html"> Properties</a></li>
+							<li><a href="./properties.html"> Deals</a></li>
 							<li><a href="./contact.html"> Contact</a></li>
                         </ul>
                     </div>
