Krijimi i Audio per Veture

--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@
                         <p class="lead">Discover the Bentley car—a masterpiece of luxury, power, and craftsmanship. With exquisite attention to detail and unparalleled performance, every Bentley car offers an extraordinary driving experience. Elevate your journey with the timeless elegance and cutting-edge innovation that only Bentley can provide.
 
                         </p>
-
+                        <h1>Car Engine Sound</h1>
+                        <audio controls>
+                            <source src="audio.mp3" type="audio/mpeg">
+                        </audio>
                     </div>
                 </div>
 				<div class="col-md-3">
