new pixi component

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">AUTO VD</a>
+                    <li><a href="pixi.html">1</a>
+                        <a href="carpixi.html">2</a>
+                    </li>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                   
