--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">AUTO VD</a>
-                    <li><a href="pixi.html">1</a>
+                    <li> <a class="navbar-brand" href="index.html">AUTO VD</a>
+                    <a href="pixi.html">1</a>
                         <a href="carpixi.html">2</a>
                     </li>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="big-tagline clearfix">
                         <h2>Get your dream car now!</h2>
                         <p class="lead">With auto VD responsive landing page template, you can promote your all premium cars. </p>
-                        <a data-scroll href="#gallery" class="btn btn-light btn-radius grd1 btn-brd">View Gallery</a>
+                        <a data-scroll href="gallery.html"  class="btn btn-light btn-radius grd1 btn-brd">View Gallery</a>
                     </div>
                 </div>
             </div>
