--- a/about.html
+++ b/about.html
@@ -23,6 +23,15 @@
     <script src="js/modernizer.js"></script>
 
 
+    <style>
+        #headernav{
+            background-image: url("uploads/range-slide.jpg");
+            background-position: center;
+            background-size: cover;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body class="realestate_version">
 
@@ -66,8 +75,8 @@
         </nav>
     </header>
 	
-	<div class="all-title-box">
-		<div class="container">
+	<div class="all-title-box" id="headernav">
+		<div class="container" >
 			<div class="row">
 				<div class="col-md-12">
 					<h2>About Us</h2>
