--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,15 @@
 
 <script src="js/modernizer.js"></script>
 
-
+<style>
+    #headernav{
+        background-image: url("uploads/contact.jpg");
+        background-position: center;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+    }
+</style>
       
 </head>
 <body class="realestate_version dark mode">
@@ -55,7 +63,7 @@
                         <li><a href="about.html">About us </a></li>
                         <li><a href="service.html">Service</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="properties.html">Properties</a></li>
+                        <li><a href="properties.html">Deals</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="social-links"><a href="#"><i class="fa fa-twitter global-radius"></i></a></li>
                         <li class="social-links"><a href="#"><i class="fa fa-facebook global-radius"></i></a></li>
@@ -70,7 +78,7 @@
         </nav>
     </header>
 	
-	<div class="all-title-box">
+	<div class="all-title-box" id="headernav">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
