--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,70 @@
 
     <script src="js/modernizer.js"></script>
 
+    <style>
+        .all-title-box {
+            position: relative;
+            overflow: hidden;
+            height: 500px;
+        }
 
+        .video-background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: 0;
+        }
+
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); /* Optional: Adds a dark overlay for better text visibility */
+            z-index: 1;
+        }
+
+        .all-title-box .container {
+            position: relative;
+            z-index: 2;
+            display: flex;
+            /* justify-content: center; */
+            align-items: center;
+            height: 100%;
+        }
+
+        .all-title-box h2 {
+            color: #fff;
+            font-size: 48px;
+            margin-bottom: 10px;
+            margin-right: 900px;
+            
+        }
+
+        .all-title-box nav#breadcrumbs {
+            text-align: right;
+        }
+
+        .all-title-box nav#breadcrumbs ul {
+            padding: 0;
+            list-style: none;
+        }
+
+        .all-title-box nav#breadcrumbs ul li {
+            display: inline;
+            color: #fff;
+            margin: 0 5px;
+        }
+
+        .all-title-box nav#breadcrumbs ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body class="realestate_version">
 
@@ -67,7 +130,7 @@
         </nav>
     </header>
 	
-	<div class="all-title-box">
+	<!-- <div class="all-title-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -81,13 +144,33 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
+    <div class="all-title-box">
+        <video class="video-background" autoplay loop muted>
+            <source src="/uploads/video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Gallery</h2>
+                    <nav id="breadcrumbs" >
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li>Gallery</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
 	
 	<div id="gallery" class="section wb">        
         <div class="container">
             <div class="section-title row text-center">
                 <div class="col-md-8 col-md-offset-2">
-                    <h3>Property Gallery</h3>
+                    <h3>Car Gallery</h3>
                     <p class="lead">Welcome to Gallery for Cars, your ultimate destination for automotive excellence. Our gallery features a stunning collection of vehicles, ranging from sleek sports cars to luxurious sedans, showcasing the finest in automotive design and engineering.</p>
                 </div>
             </div>
