--- a/properties.html
+++ b/properties.html
@@ -22,7 +22,15 @@
 
     <script src="js/modernizer.js"></script>
 
-
+	<style>
+        #headernav{
+            background-image: url("uploads/deals.jpg");
+            background-position: center;
+            background-size: cover;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body class="realestate_version">
 
@@ -66,7 +74,7 @@
         </nav>
     </header>
 	
-	<div class="all-title-box">
+	<div class="all-title-box" id="headernav">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
