--- a/service.html
+++ b/service.html
@@ -24,7 +24,15 @@
 <script src="js/modernizer.js"></script>
 
 
-   
+<style>
+    #headernav{
+        background-image: url("uploads/slider_03.jpg");
+        background-position: center;
+        background-size: cover;
+        width: 100%;
+        height: 100%;
+    }
+</style> 
 
 
 </head>
@@ -52,7 +60,7 @@
                         <li><a href="about.html">About us </a></li>
                         <li><a class="active" href="service.html">Service</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="properties.html">Properties</a></li>
+                        <li><a href="properties.html">Deals</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li class="social-links"><a href="#"><i class="fa fa-twitter global-radius"></i></a></li>
                         <li class="social-links"><a href="#"><i class="fa fa-facebook global-radius"></i></a></li>
@@ -71,7 +79,7 @@
     </header>
     
 	
-	<div class="all-title-box">
+	<div class="all-title-box" id="headernav">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
